# tedis

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  next-auth.d.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  version.py
.github/workflows/: django.yml
docker/: Dockerfile.client  Dockerfile.server  dev.txt  mode_entrypoint.sh
docker/docker-entrypoint.d/: mode_entrypoint.sh
requirements/: dev.txt
scripts/: create_super_user.sh  frontend_start.sh  generate_requirements.py  generate_requirements.py.py  load_fixtures.sh  makemigrations.sh  migrate.sh  run_server.sh  setup_dependencies.sh  setup_dependencies_client.sh  start.sh
server/: admin.py  celery.py  db.sqlite3  exception.py  exeption.py  fields.py  filters.py  load_fixtures.py  middleware.py  mixins.py  pagination.py  validators.py
server/admin/: __init__.py
server/core/: asgi.py  settings.py  wsgi.py
server/fixtures/: adminUser.json  banner.json  category.json  popularSearch.json  product.json  productImage.json
server/local/: settings.dev.py
server/migrations/: 0001_initial.py  0002_alter_customers_house_number.py  0002_alter_product_banner_alter_product_category.py  0003_alter_customers_first_name_alter_customers_last_name_and_more.py  0003_customers_role_alter_customers_bio_and_more.py  0004_alter_customers_first_name_alter_customers_last_name_and_more.py  0004_category_product.py  0005_alter_category_parent.py  0006_alter_category_options.py  (+24 more)
src/: auth.ts  hooks.ts  middleware.ts  utils.ts
(+442 files in other folders)
